aktualizacja BookController: @Valid na POST/PUT, HATEOAS
- dodanie @Valid do saveNewBook i updateBook
- zwracane EntityModel/CollectionModel z linkami self i books